--- a/src/scss/obsidian/lists.scss
+++ b/src/scss/obsidian/lists.scss
@@ -54,7 +54,7 @@ div > ul {
 .cm-formatting-list-ol {
 
 }
-body:not(.is-mobile) .mod-cm6 .HyperMD-list-line.cm-line {
+body:not(.is-mobile) .is-readable-line-width.mod-cm6 .HyperMD-list-line.cm-line {
   transform: translateX(calc(0.75em + var(--folding-offset)));
 }
 
